--- a/style.css
+++ b/style.css
@@ -418,7 +418,7 @@ body {
 
 .imagen {
     width: 100%;
-    max-width: 400px; /* Imagen más pequeña */
+    max-width: 400px; 
     height: auto;
     border-radius: 8px;
     margin-bottom: 10px;
